Finalizacion del examen

--- a/JuanAraujoB_ExamenProgreso2/JuanAraujoB_ExamenProgreso2.csproj
+++ b/JuanAraujoB_ExamenProgreso2/JuanAraujoB_ExamenProgreso2.csproj
@@ -56,13 +56,28 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Views\AboutPage.xaml">
+	  <Compile Update="Views\JA_AllNotesPage.xaml.cs">
+	    <DependentUpon>JA_AllNotesPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\JA_AboutPage.xaml.cs">
+	    <DependentUpon>JA_AboutPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\JA_NotePage.xaml.cs">
+	    <DependentUpon>JA_NotePage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Views\JA_AboutPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Views\AllNotesPage.xaml">
+	  <MauiXaml Update="Views\JA_AllNotesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Views\NotePage.xaml">
+	  <MauiXaml Update="Views\JA_Conteo.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\JA_NotePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
